--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <title>Curriculum Vitae</title>
-<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
+<link href="bootstrap.css" rel='stylesheet' type='text/css' />
 <!-- Custom Theme files -->
- <link href="css/dashboard.css" rel="stylesheet">
-<link href="css/style.css" rel='stylesheet' type='text/css' />
+ <link href="dashboard.css" rel="stylesheet">
+<link href="style.css" rel='stylesheet' type='text/css' />
 
 <!-- Custom Theme files -->
 <!--//theme-style-->
