--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 </div>
 		 </div>
 		 <div class="copywrite">
-			 <p>© 2016 AKSHAY PARAKH All Rights Reseverd | Developed &amp; Maintained by <a href="http://https://babaakki.github.io/myPage/" target="_blank">Akshay Parakh</a> </p>
+			 <p>© 2016 AKSHAY PARAKH All Rights Reseverd | Developed &amp; Maintained by <a href="https://babaakki.github.io/myPage/" target="_blank">Akshay Parakh</a> </p>
 		 </div>
 	 </div>
 </div>
