--- a/index.html
+++ b/index.html
@@ -69,12 +69,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 </div>
 			 <div class="skill_list">
 				 <div class="skill1">
-					 <ul>					 
-						<li>CA FINAL : GROUPII, MAY 2016, 210/400 </li>
-						<li>CA FINAL : GROUPI, NOVEMBER 2015, 215/400</li>
-						<li>IPCE, MAY 2012, 352/700</li>
-						<li>CPT, DECEMBER 2010, 129/200</li>
-					 </ul>
+					 <table>
+						 <tr>
+							 <td>CA FINAL : GROUPII</td>
+							 <td>MAY 2016</td>
+							 <td>210/400 </td>
+						 </tr>
+						 <tr>
+							 <td>CA FINAL : GROUPI</td>
+							 <td>NOVEMBER 2015</td>
+							 <td>215/400 </td>
+						 </tr>
+						 <tr>
+							 <td>IPCE</td>
+							 <td>MAY 2012</td>
+							 <td>352/700 </td>
+						 </tr>
+						 <tr>
+							 <td>CPT</td>
+							 <td>DECEMBER 2010</td>
+							 <td>129/200 </td>
+						 </tr>
+					 </table>
 				 </div>
 				 
 				 <div class="clearfix"></div>
