--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				 <div class="skill1">
 					 <ul>					 
 						<li>TALLY</li>
+						 <li>TAXPRO</li>
 						<li>Completed 100 hrs IT training as Prescribed by ICAI.</li>
 					 </ul>
 				 </div>
