--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				 <h6>Tax &amp; Audit Assistant</h6>
 				 <p>Involved in Preparation of financial statements and reports. (Accounting &amp; Auditing).</p>
 				 <p>Engaged in Tax Audit of various firms and Individuals.</p>
+				 <p>Preparation of CMA reports.</p>
 				 <p class="cmpny1">Preparation of Project reports of “Rice mill”.</p>
 			 </div>
 			 <div class="company_details">
@@ -59,14 +60,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				 <p>Involved in Preparation of financial statements and reports. (Accounting &amp; Auditing).</p>
 				 <p>Engaged in Tax Audit of various firms and Individuals.</p>
 				 <p>Engaged in Preparation of computation of income of individuals.</p>
-				 <p>Preparation of CMA reports.</p>
 			 </div>
 		 </div>
 		 <div class="skills">
 			 <h3 class="clr2">Professional skills</h3>
 			 
 			 	<div class="skill_info">
-				 	<h4>Workshop on STOCK MARKET, BSE, Mumbai</h4>
+				 	<h4>Workshop on BASICS OF STOCK MARKET, BSE Institute, Mumbai</h4>
 				 </div>
 				 <div class="skill_info">
 				 	<h4>CHARTRED ACCOUNTANT</h4>
@@ -110,12 +110,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 </div>
 			 <div class="education_details">
 				 <h4>DELHI PUBLIC SCHOOL, DURG (CBSE)<span>MARCH 2010</span></h4>
-				 <h6>HSC</h6>
+				 <h6>HSC (Maths Background - 75%)</h6>
 				 <p class="cmpny1"></p>
 			 </div>
 			 <div class="education_details">
 				 <h4>St. XAVIER'S SENIOR SECONDARY SCHOOL, DHAMTARI (ICSE)<span>MARCH 2008</span></h4>
-				 <h6>HSC</h6>
+				 <h6>HSC - 80%</h6>
 				 <p></p>
 			 </div>
 		 </div>
@@ -125,7 +125,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				 <div class="skill1">
 					 <ul>					 
 						<li>TALLY</li>
-						<li>TAXPRO</li>
+						<li>MS-OFFICE</li>
+						<li>TAXPRO -  Income tax Return filing Application</li>
 						<li>Completed 100 hrs IT training as Prescribed by ICAI.</li>
 					 </ul>
 				 </div>
