--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				 <p class="cmpny1">Preparation of Project reports of “Rice mill”.</p>
 			 </div>
 			 <div class="company_details">
-				 <h4>Prabhudas Patel &amp; Co., Raipur <span>NOVEMBER 2007 - MAY 2009</span></h4>
+				 <h4>Prabhudas Patel &amp; Co., Raipur <span>10TH SEPTEMBER 2012 - 09TH SEPTEMBER 2015</span></h4>
 				 <h6>Article Assistant</h6>
 				 <p>Involved in Preparation of financial statements and reports. (Accounting &amp; Auditing).</p>
 				 <p>Engaged in Tax Audit of various firms and Individuals.</p>
@@ -133,7 +133,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				 <div class="clearfix"></div>
 			 </div>
 		 </div>
-		<div class="intrest">
+		<div class="interest">
 			 <h3 class="clr5">Intrests</h3>
 			 	<div class="skill_list">
 				 <div class="skill1">
